[tool.poetry]
name = "crewai deps"
version = "0.1.0"
description = "crewAI dependencies"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.35.8" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
